<resources>
    <string name="app_name">SimpleApp</string>
    <string name="username">UserName :</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">LogIn</string>
    <string name="password">Password :</string>
    <string name="add">add</string>
    <string name="enter_your_message">Enter your message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>