<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/app"
            tools:ignore="ImageContrastCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/custom"
                android:layout_weight="0"
                android:text="@string/username" />

            <EditText
                android:id="@+id/edt_userName"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_your_user_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/custom"
                android:layout_weight="0"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/mycolor"
            android:text="@string/login" />
        <!--        android:onClick="onClickLogin"-->


    </LinearLayout>
</layout>